test_scores/negative_dimers/features/P43243.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P43243.pkl.xz